cmake_minimum_required (VERSION 3.10)

if(PLATFORM_WIN32)
    add_subdirectory(Tutorial00_HelloWin32)
elseif(PLATFORM_LINUX)
    add_subdirectory(Tutorial00_HelloLinux)
endif()
add_subdirectory(Tutorial01_HelloTriangle)
add_subdirectory(Tutorial02_Cube)
add_subdirectory(Tutorial03_Texturing)
add_subdirectory(Tutorial03_Texturing-C)
#TODO There is some issue with CMake when running 'cmake --build', but when building the C# project from Visual Studio, `Platform` is set correctly
if(PLATFORM_WIN32 AND (CMAKE_GENERATOR MATCHES "Visual Studio") AND ((CMAKE_GENERATOR_PLATFORM STREQUAL "x64") OR (CMAKE_GENERATOR_PLATFORM STREQUAL "")))
    if(NOT ${MAX_DOT_NET_SDK_VERSION} STREQUAL "")
        set(REQUIRED_DOT_NET_SDK_VERSION "6.0.0")
        if (${MAX_DOT_NET_SDK_VERSION} VERSION_GREATER_EQUAL ${REQUIRED_DOT_NET_SDK_VERSION})
            add_subdirectory(Tutorial03_Texturing-DotNet)
        else()
            message(WARNING "Skipping Tutorial03_Texturing-DotNet because maximum available .NET SDK version ${MAX_DOT_NET_SDK_VERSION} is less than the minimum required ${REQUIRED_DOT_NET_SDK_VERSION}")
        endif()
    else()
        message(WARNING "Skipping Tutorial03_Texturing-DotNet because .NET SDK is not installed on this machine")
    endif()
endif()
add_subdirectory(Tutorial04_Instancing)
add_subdirectory(Tutorial05_TextureArray)
add_subdirectory(Tutorial06_Multithreading)
add_subdirectory(Tutorial07_GeometryShader)
add_subdirectory(Tutorial08_Tessellation)
add_subdirectory(Tutorial09_Quads)
add_subdirectory(Tutorial10_DataStreaming)
add_subdirectory(Tutorial11_ResourceUpdates)
add_subdirectory(Tutorial12_RenderTarget)
add_subdirectory(Tutorial13_ShadowMap)
add_subdirectory(Tutorial14_ComputeShader)
if(PLATFORM_WIN32)
    add_subdirectory(Tutorial15_MultipleWindows)
endif()
add_subdirectory(Tutorial16_BindlessResources)
add_subdirectory(Tutorial17_MSAA)
add_subdirectory(Tutorial18_Queries)
add_subdirectory(Tutorial19_RenderPasses)
add_subdirectory(Tutorial20_MeshShader)
add_subdirectory(Tutorial21_RayTracing)
add_subdirectory(Tutorial22_HybridRendering)
add_subdirectory(Tutorial23_CommandQueues)
add_subdirectory(Tutorial24_VRS)
if(PLATFORM_WIN32 OR PLATFORM_LINUX OR PLATFORM_MACOS)
    add_subdirectory(Tutorial25_StatePackager)
    add_subdirectory(Tutorial26_StateCache)
endif()
